changing navbar settings and fixing minor css spacing bugs

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -235,6 +235,11 @@ img {
 		0 -0.03em black;
 }
 
+
+.col-md-4 {
+	padding: 30px 25px 0 25px;
+}
+
 .section-3-container {
 	background-color: #e69422;
 	margin-top: 8%;
